force-app/main/default/objects/Org_Unit__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Faculty_Portfolio_Desc__c</fullName>
        <label>Linked Faculty Portfolio Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Faculty_Portfolio_Id__c</fullName>
        <label>Linked Faculty Portfolio Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_School_Division_Desc__c</fullName>
        <label>Linked School Division Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_School_Division_Id__c</fullName>
        <label>Linked School Division Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <description>Organisation Id</description>
        <externalId>true</externalId>
        <label>Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <label>Organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Short_Name__c</fullName>
        <label>Organisation Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Organisation_Id__c</fullName>
        <label>Owner Organisation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_End_Date__c</fullName>
        <label>Relationship End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_Start_Date__c</fullName>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Org Unit</label>
    <nameField>
        <label>Org Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Unit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>